fixed dropshadow on sheet and overflow scroll

--- a/public/layout/sass/_testing.scss
+++ b/public/layout/sass/_testing.scss
@@ -8,6 +8,7 @@
 	height: 100%;
 	width: 100%;
 	position: relative;
+	overflow: hidden;
 	
 	/* are we onboard? */
 	
@@ -49,14 +50,13 @@
 		position: absolute;
 		top: 0;
 		right: 0;
-		overflow: hidden;
+		// overflow: hidden;
 		
 		.sheet {
 			width: 100%;
 			height: 100%;
 			padding: 0;
 			margin: 0;
-			@include dropshadowULTRA;
 		}
 	}
 	
